--- a/Style.css
+++ b/Style.css
@@ -15,16 +15,17 @@ body {
 }
 
 .header {
-    margin-left: 148px;
-    margin-right: 132px;
-    position: absolute;
+    width: 100%;
     max-width: 980px;
-    height: 508px;
-    top: 0px;
+    padding: 15px;
+    margin: 0 auto;
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .logo {
-
+    float: left;
 }
 
 .logo_yellow-box {
@@ -53,10 +54,11 @@ body {
 }
 
 .search {
+    float: right;
     width: 201px;
     height: 33px;
-    margin-left: 77.5%;
     margin-top: 40px;
+    margin-right: 1%;
     box-sizing: border-box;
     background: #FFFFFF;
     border: 1px solid #6D3D99;
@@ -86,7 +88,7 @@ body {
 }  
 
 .articles {
-    margin-top: 16px;
+    margin-top: 94px;
 }
 
 .list {
@@ -132,18 +134,20 @@ color: #FFFFFF;
 
 
 .frame {
-    position: relative;
-    display: inline-block;
+    display: block;
+    margin: 0 auto;
     height: 332px;
-    width: 980px;
-    margin-top: 16px
+    width: 100%;
+    max-width: 980px;
+    margin-top: 16px;
 }
 
 .img-field {
     display: inline-block;
     position: absolute;
     height: 332px;
-    width: 98%;
+    width: 100%;
+    max-width: 961px;
     background: url(./img/Mountains-and-hills-julian-alps.jpg)
 }
 
@@ -202,9 +206,16 @@ color: #FFFFFF;
 
 .content_1 {
     display: block;
-    max-width: 980px;
-    margin-left: 159px;
-    margin-top: 516px;
+    margin: 0 auto;
+    margin-top: 32px;
+    max-width: 961px;
+}
+
+.first_line_con {
+    max-width: 960px;
+    width: 99%;
+    margin: 0 auto;
+    margin-left: 1.5%;
 }
 
 .item {
@@ -216,11 +227,11 @@ color: #FFFFFF;
 
 .color-line {
     position: absolute;
-    width: 100%;
-    max-width: 462px;
+    width: 46.5%;
+    max-width: 448px;
     height: 16px;
 
-background: #9B51E0;
+    background: #9B51E0;
 }
 .asl {
     position: absolute;
@@ -252,7 +263,6 @@ background: #9B51E0;
     margin-left: 172px;
     margin-top: 32px;
     max-width: 300px;
-    letter-spacing: 0.007em;
 
     font-family: Roboto, sans-serif;
     font-style: normal;
@@ -264,10 +274,10 @@ background: #9B51E0;
 }
 
 .first_line {
+    margin-right: 0;
 }
 
 .line-2 {
-       width: 454px;
        background: #FFC740;
 }
 
@@ -335,5 +345,34 @@ background: #9B51E0;
     font-size: 14px;
     line-height: 16px;
     color:white;
+}
 
+h4 {
+    position: absolute;
+    height: 15px;
+
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #000000;
+}
+
+.item-text-3 {
+    position: absolute;
+    height: 29px;
+    
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: justify;
+    color: #000000;
+}
+
+.items-text-foto {
+    display: inline-block;
+    margin-left: 4%;
 }
