--- a/Style.css
+++ b/Style.css
@@ -311,14 +311,16 @@ color: #FFFFFF;
 }
 
 .items-text {
-    display: block;
+    display: inline-block;
+    margin-top: 32px;
     width: 99%;
-    max-width: 180px;
+    min-height: 16px;
+    max-width: 288px;
 }
 
 .little_photo {
     position: absolute;
-    margin-top: 35px;
+    margin-top: 0;
     width: 40px;
     height: 40px;
     border: 1px solid grey;
@@ -327,14 +329,14 @@ color: #FFFFFF;
 .lorem {
     position: absolute;
     margin-left: 55px;
-    margin-top: 32px;
+    margin-top: 0px;
 }
 
 .item-text-3 {
     position: absolute;
     margin-left: 55px;
-    margin-top: 46px;
-    width: 18%;
+    margin-top: 15px;
+    width: 23%;
     max-width: 232px;
 }
 
