--- a/Style.css
+++ b/Style.css
@@ -58,7 +58,7 @@ body {
     float: right;
     width: 201px;
     height: 33px;
-    margin-top: 35px;
+    margin-top: 38px;
     margin-right: 1%;
     box-sizing: border-box;
     background: #FFFFFF;
@@ -271,6 +271,24 @@ color: #FFFFFF;
     line-height: 14px;
     text-align: justify;
     color: #000000;
+}
+
+.read_more {
+    margin-left: 171px;
+    position: absolute;
+    height: 15px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #000000;
+}
+
+.r_m2 {
+    margin-left: 0;
+    margin-top: 8px;
 }
 
 .first_line {
