--- a/Style.css
+++ b/Style.css
@@ -154,6 +154,7 @@ color: #FFFFFF;
     margin-left: 42px;
     margin-top: 18px;
 
+    font-weight: normal;
     font-size: 64px;
     line-height: 75px;
     color: #FFC740;
