--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet);
+
 *, ::before, ::after {
     box-sizing: inherit;
 }
@@ -10,7 +12,7 @@ body {
     font-weight: normal;
 }
 
-.wrap {
+.wrapper {
     max-width: 1260px;
     width: 100%;
     background: #FFFFFF;
@@ -19,20 +21,17 @@ body {
 }
 
 .header {
+    justify-content: space-between;
     width: 100%;
     max-width: 980px;
     padding: 15px;
     margin: 0 auto;
-    content: "";
-    display: table;
-    clear: both;
 }
 
 .logo {
-    float: left;
 }
 
-.logo_yellow-box {
+.logo__box {
     position: absolute;
     width: 50px;
     height: 48px;
@@ -44,7 +43,7 @@ body {
     box-sizing: border-box;
 }
 
-.logo_text {
+.logo__text {
     position: absolute;
     margin-left: 26px;
     margin-top: 41px;
@@ -56,7 +55,6 @@ body {
 }
 
 .search {
-    float: right;
     width: 201px;
     height: 33px;
     margin-top: 38px;
@@ -66,7 +64,7 @@ body {
     border: 1px solid #6D3D99;
 }
 
-.search_input {
+.search__input {
     width: 159px;
     height: 31px;
     border: none;
@@ -74,7 +72,7 @@ body {
     background: #FFFFFF;
 }
 
-.search_btn {
+.search__btn {
     position: absolute;
     width: 40px;
     height: 31px;
@@ -87,8 +85,8 @@ body {
     color: #FFFFFF;
 }  
 
+
 .articles {
-    margin-top: 94px;
 }
 
 .list {
@@ -97,7 +95,7 @@ body {
     padding-left: 0;
 }
 
-.article {
+.menu__item {
     display: inline-block;
     text-align: center;
     margin-right: -5px;
@@ -106,7 +104,7 @@ body {
     background: #FFFFFF;
 }
 
-.link {
+.menu__link {
     display: inline-block;
     text-decoration: none;
     text-align: center;
@@ -116,12 +114,18 @@ body {
     line-height: 16px;
 
     color: #050505;
-
 }
 
-.home {
+.menu__link:hover {
+    text-decoration: none;
+    color: #050505;
+    text-shadow: 2px 1px 2px grey;
+}
+
+.active {
     background: #FFC740;
     margin-left: 1px;
+    text-decoration: none;
 }
 
 .chosen {
@@ -138,16 +142,21 @@ body {
     margin-top: 16px;
 }
 
-.img-field {
-    display: inline-block;
+.frame__img {
     position: absolute;
+    background-size: cover;
+    background-position: 0 100%;
     height: 332px;
     width: 100%;
     max-width: 961px;
-    background: url(./img/Mountains-and-hills-julian-alps.jpg)
+    background: url(../img/mountains.jpg);
 }
 
-.insign_1 {
+.frame-block {
+    
+}
+
+.frame-block__article {
     position: absolute;
     width: 528px;
     height: 150px;
@@ -160,7 +169,7 @@ body {
     color: #FFC740;
 }
 
-.sign_2 {
+.frame-block__text {
     position: absolute;
     width: 451px;
     margin-top: 175px;
@@ -171,7 +180,7 @@ body {
     color: #FFFFFF;
 }
 
-.read_btn {
+.frame-block__btn {
     position: absolute;
     list-style: none;
     width: 125px;
@@ -182,7 +191,7 @@ body {
     background: #6D3D99;
 }
 
-.read_link {
+.frame-block__btn-link {
     display: inline-block;
     margin-top: 10px;
     text-decoration: none;
@@ -193,28 +202,29 @@ body {
     color: #FFFFFF;
 }
 
-.content_1 {
+
+
+.main {
     display: block;
     margin: 0 auto;
     margin-top: 32px;
     max-width: 961px;
 }
 
-.first_line_con {
+.main-content {
     max-width: 960px;
     width: 99%;
-    margin: 0 auto;
-    margin-left: 1.5%;
+    margin: 0 auto;;
 }
 
-.item {
+.main-content-item {
     display: inline-block;
     width: 47%;
     height: 200px;
     margin-right: 20px;
 }
 
-.color-line {
+.main-content-item__color-line {
     position: absolute;
     width: 46.5%;
     max-width: 448px;
@@ -222,7 +232,7 @@ body {
 
     background: #9B51E0;
 }
-.asl {
+.main-content-item__article {
     position: absolute;
     margin-top: 0px;
     margin-left: 16px;
@@ -237,7 +247,7 @@ body {
     color: #000000;
 }
 
-.foto {
+.main-content-item__photo {
     position: absolute;
     margin-top: 32px;
     width: 138px;
@@ -246,7 +256,7 @@ body {
     border: 2px solid #FFC740;
 }
 
-.item-text {
+.main-content-item__text {
     margin-left: 172px;
     margin-top: 32px;
     max-width: 300px;
@@ -257,16 +267,21 @@ body {
     color: #000000;
 }
 
-.read_more {
+.main-content-item__link {
     margin-left: 171px;
     position: absolute;
     height: 15px;
-
 
     font-size: 12px;
     line-height: 14px;
     color: #000000;
 }
+
+
+
+
+
+
 
 .r_m2 {
     margin-left: 0;
@@ -294,6 +309,7 @@ body {
 }
 
 .item-2 {
+    flex-wrap: wrap;
     vertical-align: top;
     width: 31%;
     margin: 0 auto;
@@ -363,16 +379,15 @@ body {
 }
 
 .clients-img {
+    flex-wrap: wrap;
+    align-items: center;
     margin-top: 24px;
     width: 100%;
     max-width: 928px;
-    display: inline-block;
-    text-align: center;
 }
 
 .clients-photo {
-    display: inline-block;
-    margin-left: 16px;
+
 }
 
 .bottom {
