--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,6 @@ body {
     position: absolute;
     width: 50px;
     height: 48px;
-    margin-left: 1px;
 
     background: #FFFFFF;
     border: 3px solid #FFC740;
@@ -147,9 +146,8 @@ body {
 
 .frame__article {
     position: absolute;
-    width: 528px;
-    height: 150px;
-    margin-left: 42px;
+    max-width: 560px;
+    margin-left: 4.5%;
     margin-top: 18px;
 
     font-weight: normal;
@@ -160,9 +158,9 @@ body {
 
 .frame__paragraf {
     position: absolute;
-    width: 451px;
+    max-width: 451px;
     margin-top: 175px;
-    margin-left: 42px;
+    margin-left: 4.5%;
 
     font-size: 14px;
     line-height: 16px;
@@ -202,19 +200,18 @@ body {
     max-width: 960px;
     width: 99%;
     margin: 0 auto;
-    margin-left: 1.5%;
 }
 
 .content-item {
-    display: inline-block;
     width: 47%;
-    height: 200px;
+    min-height: 230px;
     margin-right: 20px;
 }
 
 .item__line {
+    box-sizing: border-box;
     position: absolute;
-    width: 46.5%;
+    width: 100%;
     max-width: 448px;
     height: 16px;
 
@@ -285,17 +282,15 @@ body {
 }
 
 .content-2 {
-    display: block;
     margin: 0 auto;
     margin-top: 16px;
-    max-width: 961px;
+    max-width: 934px;
 }
 
 .content-item-2 {
     vertical-align: top;
     width: 31%;
-    margin: 0 auto;
-    margin-left: 1.5%;
+    margin: 0 auto;;
 }
 
 .cline_2 {
@@ -344,15 +339,9 @@ body {
 }
 
 .clients {
-    display: block;
     margin: 0 auto;
     margin-top: 32px;
-    max-width: 961px;
-}
-
-.clients-header {
-    max-width: 961px;
-    margin-left: 1.5%;
+    max-width: 934px;
 }
 
 .cline_3 {
