--- a/css/main.css
+++ b/css/main.css
@@ -127,27 +127,21 @@ body {
 .header-frame {
     display: block;
     margin: 0 auto;
-    height: 332px;
+    min-height: 332px;
     width: 100%;
     max-width: 980px;
     margin-top: 16px;
-}
 
-.frame__img {
-    position: absolute;
     background-size: cover;
     background-position: 0 100%;
-    height: 332px;
-    width: 100%;
-    max-width: 980px;
     background-repeat: no-repeat;
     background-image: url(../img/Mountains-and-hills-julian-alps.jpg)
 }
 
 .frame__article {
-    position: absolute;
+    
     max-width: 560px;
-    margin-left: 4.5%;
+    margin-left: 3.2%;
     margin-top: 18px;
 
     font-weight: normal;
@@ -157,10 +151,8 @@ body {
 }
 
 .frame__paragraf {
-    position: absolute;
     max-width: 451px;
-    margin-top: 175px;
-    margin-left: 4.5%;
+    margin-left: 3.2%;
 
     font-size: 14px;
     line-height: 16px;
@@ -168,12 +160,10 @@ body {
 }
 
 .frame__btn {
-    position: absolute;
     list-style: none;
     width: 125px;
     height: 34px;
-    margin-top: 262px;
-    margin-left: 42px;
+    margin-left: 3.2%;
     text-align: center;
     background: #6D3D99;
 }
@@ -198,21 +188,18 @@ body {
 
 .content {
     max-width: 960px;
-    width: 99%;
     margin: 0 auto;
 }
 
 .content-item {
     width: 47%;
     min-height: 230px;
-    margin-right: 20px;
 }
 
 .item__line {
-    box-sizing: border-box;
     position: absolute;
-    width: 100%;
-    max-width: 448px;
+    width: 47%;
+    max-width: 452px;
     height: 16px;
 
     background: #9B51E0;
@@ -303,7 +290,7 @@ body {
     width: 100%;
 }
 
-.little-item {
+.mini-item {
     display: inline-block;
     margin-top: 32px;
     width: 99%;
@@ -311,7 +298,7 @@ body {
     max-width: 288px;
 }
 
-.little_photo {
+.mini-item__photo {
     position: absolute;
     margin-top: 0;
     width: 40px;
@@ -319,7 +306,7 @@ body {
     border: 1px solid grey;
 }
 
-.lorem {
+.mini-item__article {
     position: absolute;
     margin-left: 55px;
     margin-top: 0px;
@@ -330,7 +317,7 @@ body {
     color: #000000;
 }
 
-.item-text-3 {
+.mini-item__text {
     position: absolute;
     margin-left: 55px;
     margin-top: 15px;
@@ -350,24 +337,24 @@ body {
 }
 
 .clients-logo {
+    align-items: center;
     margin-top: 24px;
     width: 100%;
     max-width: 928px;
-    display: inline-block;
     text-align: center;
 }
 
 .clients-logo__img {
-    display: inline-block;
+    
     margin-left: 16px;
 }
 
 .bottom {
-    display: table;
     margin-top: 32px;
     width: 100%;
     height: 115px;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
     background: #6D3D99;
 
 }
