--- a/css/main.css
+++ b/css/main.css
@@ -189,12 +189,7 @@ body {
     color: #FFFFFF;
 }
 
-.frame__btn-link:hover {
-    text-decoration: none;   
-}
-
 .main-content {
-    display: block;
     margin: 0 auto;
     margin-top: 32px;
     max-width: 961px;
@@ -206,11 +201,15 @@ body {
 }
 
 .content-item {
+    flex-direction: column;
     width: 47%;
     min-height: 230px;
 }
 
 .header-item {
+    max-width: 100%;
+    height: 16px;
+
 }
 
 .item__line {
@@ -237,11 +236,13 @@ body {
 }
 
 .item-block {
-
+    display: flex;
+    justify-content: start;
+    width: 100%;
 }
 
 .item__img {
-    position: absolute;
+    display: block;
     margin-top: 32px;
     width: 138px;
     height: 137px;
@@ -250,14 +251,12 @@ body {
 }
 
 .item-block-text {
-
+    margin-left: 20px;
+    margin-top: 32px;
+    width: 100%;
 }
 
 .item__text {
-    margin-left: 172px;
-    margin-top: 32px;
-    max-width: 300px;
-
     font-size: 12px;
     line-height: 14px;
     text-align: justify;
@@ -265,8 +264,6 @@ body {
 }
 
 .item__link {
-    margin-left: 171px;
-    position: absolute;
     height: 15px;
 
 
