--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,7 +13,6 @@ body {
 }
 
 .wrapper {
-    max-width: 980px;
     width: 100%;
     background: #FFFFFF;
     margin: auto;
@@ -22,14 +21,16 @@ body {
 
 .header {
     width: 100%;
-    max-width: 980px;
     margin: 0 auto;
+    padding-bottom: 16px;
+    background-color: white;
 }
 
 .logo {
     width: 170px;
     height: 48px;
-    margin-top: 30px;
+    margin-top: 24px;
+    margin-left: 5%;
 }
 
 .logo__box {
@@ -53,10 +54,18 @@ body {
     line-height: 28px;
 }
 
+.menu-bar-false {
+    width: 100%;
+    max-width: 980px;
+    margin: 0 auto;
+    margin-top: 28px;
+}
+
 .search {
     width: 201px;
     height: 33px;
-    margin-top: 38px;
+    margin-top: 32px;
+    margin-right: 5%;
     box-sizing: border-box;
     background: #FFFFFF;
     border: 1px solid #6D3D99;
@@ -88,6 +97,7 @@ body {
     max-width: 980px;
     margin: 0 auto;
     margin-top: 24px;
+    display: none;
 }
 
 .menu {
@@ -101,6 +111,10 @@ body {
     height: 47px;
 }
 
+.menu__item:hover {
+    background: #FFC775;
+}
+
 .menu__link {
     display: inline-block;
     text-decoration: none;
@@ -109,9 +123,12 @@ body {
 
     font-size: 14px;
     line-height: 16px;
-
     color: #050505;
+}
 
+.menu__link:hover {
+    text-shadow: 1px 1px 1px #777;;
+    color: #AAAAAA;
 }
 
 .menu__item_active {
@@ -124,11 +141,11 @@ body {
 }
 
 .header-frame {
+    justify-content: flex-start;
+    align-content: center;
     margin: 0 auto;
-    min-height: 332px;
+    min-height: 400px;
     width: 100%;
-    max-width: 980px;
-    margin-top: 16px;
 
     background-size: cover;
     background-position: center;
@@ -139,7 +156,7 @@ body {
 .frame__article {
     max-width: 560px;
     margin-left: 3.2%;
-    margin-top: 18px;
+    margin-top: 44px;
 
     font-weight: normal;
     font-size: 64px;
@@ -401,4 +418,42 @@ body {
 
 .copyright__cp-link {
     text-decoration: none;
+}
+
+@media (max-width: 1430px) {
+
+    .header {
+    position: relative;
+    width: 100%;
+    max-width: 980px;
+    margin: 0 auto;
+    padding-bottom: 0px;
+    }
+
+    .logo {
+        margin-left: 3%;
+    }
+
+    .search {
+    margin-right: 3%;
+    }
+
+    .menu-bar-false {
+        display: none;
+    }
+
+    .menu-bar {
+    display: block;
+    margin-bottom: 16px;
+    background-color: #FFF;
+    }
+
+    .header-frame {
+    min-height: 324px;
+    }
+
+    .frame__article {
+    margin-top: 18px;
+    }
+
 }
