--- a/src/css/main.css
+++ b/src/css/main.css
@@ -366,8 +366,8 @@ body {
 }
 
 .header-item-clients {
+    justify-content: center;
     display: block;
-    width: 97%;
     margin: 0 auto;
 }
 
@@ -383,15 +383,13 @@ body {
 }
 
 .clients-logo {
+    margin: 0 auto;
     align-items: center;
-    width: 100%;
     max-width: 928px;
-    text-align: center;
 }
 
 .clients-logo__img {
-    
-    margin-left: 16px;
+    margin-left: 0px;
 }
 
 .bottom {
@@ -489,13 +487,8 @@ body {
     }
 
     .frame__btn {
-        list-style: none;
-        width: 125px;
-        height: 34px;
         margin: 10px auto;
         text-align: center;
-        background: #6D3D99;
-        cursor: pointer;
     }
 }
 
@@ -521,6 +514,7 @@ body {
 
     .frame__article {
         padding: 0 10px;
+        margin-top: 44px;
         margin-bottom: 12px;
         font-size: 56px;
         line-height: 54px;
@@ -528,6 +522,10 @@ body {
 
     .frame__paragraf {
         padding: 0 10px;
+    }
+
+    .frame__btn {
+        margin-bottom: 24px;
     }
 
     .content {
@@ -539,7 +537,7 @@ body {
     }
 
     .item__line {
-        max-width: 370px;
+        max-width: 504px;
         width: 90%;
     }
 
@@ -568,7 +566,9 @@ body {
     }
 
     .cline_3 {
-
+        margin: 0 auto;
+        max-width: 533px;
+        width: 95%
     } 
 }
 
