--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,7 +65,7 @@ body {
     width: 201px;
     height: 33px;
     margin-top: 32px;
-    margin-right: 5%;
+    margin-right: 1%;
     box-sizing: border-box;
     background: #FFFFFF;
     border: 1px solid #6D3D99;
@@ -343,7 +343,7 @@ body {
     margin-right: 0;
 }
 
-.line-2 {
+.item__line-line-2 {
        background: #FFC740;
 }
 
@@ -363,7 +363,7 @@ body {
     margin: 0 auto;;
 }
 
-.cline_2 {
+.item__line-line2 {
     width: 31%;
     max-width: 288px;
 }
@@ -426,7 +426,7 @@ body {
     max-width: 934px;
 }
 
-.cline_3 {
+.item__line-line3 {
     width: 97%;
     max-width: 924px;
 }
@@ -443,13 +443,14 @@ body {
 
 .media {
     margin: 0 auto;
-    margin-top: 32px;
+    margin-top: 8px;
     max-width: 934px;
 }
 
 .media-files {
     flex-direction: column;
     margin: 0 auto;
+    margin-top: 24px;
     max-width: 928px;
 }
 
@@ -465,10 +466,24 @@ body {
 
 .media-files-video__item {
     margin: 10px;
+    border: 5px solid #9B51E0;
+    border-radius: 3px;
+}
+
+.media-files-video__item:hover {
+    transition: all 0.25s linear;
+    box-shadow: 0px 0px 5px #9B51F5;
 }
 
 .media-files-audio__item {
     margin: 10px 16px;
+    border: 3px solid #FFC740;
+    border-radius: 30px;
+}
+
+.media-files-audio__item:hover {
+    transition: all 0.25s linear;
+    box-shadow: 0px 0px 10px #FFA500;
 }
 
 .bottom {
@@ -501,7 +516,7 @@ body {
     text-decoration: none;
 }
 
-@media (max-width: 1505px) {
+@media (max-width: 1427px) {
     .menu-bar-false {
         display: none;
     }
@@ -676,7 +691,7 @@ body {
         margin-bottom: 12px;
     }
 
-    .cline_2 {
+    .item__line-line2 {
         width: 90%;
         max-width: 481px;
     }
@@ -693,7 +708,7 @@ body {
         max-width: 99%;
     }
 
-    .cline_3 {
+    .item__line-line3 {
         margin: 0 auto;
         max-width: 533px;
         width: 95%
